--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,63 @@
-# Core Libraries
-numpy
-pandas
-scipy
-json5
-argparse
-logging
+# Core dependencies
+numpy==1.24.3
+pandas==2.0.3
+python-dateutil==2.8.2
+pytz==2023.3
+
+# Trading and Financial
+ib_insync==0.9.85  # Interactive Brokers API
+yfinance==0.2.28   # Yahoo Finance (backup data source)
+ta-lib==0.4.28     # Technical Analysis Library
+alpha_vantage==2.3.1  # Alternative market data
+
+# Data Processing and Analysis
+scipy==1.10.1
+statsmodels==0.14.0
+scikit-learn==1.3.0
 
 # GUI
-PyQt5
+PyQt5==5.15.9
+PyQtChart==5.15.6
+
+# Database
+sqlalchemy==2.0.19
+psycopg2-binary==2.9.7  # PostgreSQL adapter
+
+# Networking and API
+requests==2.31.0
+websockets==11.0.3
+aiohttp==3.8.5
+
+# Logging and Monitoring
+prometheus-client==0.17.1
+python-json-logger==2.0.7
+
+# Testing
+pytest==7.4.0
+pytest-asyncio==0.21.1
+pytest-mock==3.11.1
+
+# Development Tools
+black==23.7.0
+flake8==6.1.0
+mypy==1.4.1
+
+# Security
+python-dotenv==1.0.0
+cryptography==41.0.3
+
+# Performance
+numba==0.57.1
+pyarrow==12.0.1
+
+# Documentation
+sphinx==7.1.2
+sphinx-rtd-theme==1.2.2
 
 # Machine Learning & AI
 torch
 torchvision
 torchaudio
-scikit-learn
 tensorflow
 xgboost
 lightgbm
@@ -22,13 +66,7 @@ catboost
 # Trading & Market Data
 ccxt
 ta  # Technical Analysis library
-yfinance
-alpha_vantage
 requests
-
-# Database
-psycopg2-binary  # PostgreSQL database
-sqlalchemy
 
 # Execution & Parallel Processing
 concurrent-log-handler
@@ -37,7 +75,6 @@ threadpoolctl
 
 # Risk Management & Financial Analysis
 quantlib
-statsmodels
 
 # Visualization
 matplotlib
@@ -49,7 +86,6 @@ beautifulsoup4
 lxml
 
 # API Access (for news scraping, external data)
-requests
 tweepy  # Twitter API for sentiment analysis
 
 # Others
